# open-lifeworlds-data-product-berlin-building-permits

./: README.md  data-product-manifest.yml  data-product.yml  data-transformation.yml  dpds.yml  main.ipynb  odps.yml  pyproject.toml
data/berlin-lor-building-permits-2022-01/: berlin-lor-building-permits-2022-01-districts.geojson
data/berlin-lor-building-permits-2022-02/: berlin-lor-building-permits-2022-02-districts.geojson
data/berlin-lor-building-permits-2022-03/: berlin-lor-building-permits-2022-03-districts.geojson
data/berlin-lor-building-permits-2022-04/: berlin-lor-building-permits-2022-04-districts.geojson
data/berlin-lor-building-permits-2022-05/: berlin-lor-building-permits-2022-05-districts.geojson
data/berlin-lor-building-permits-2022-06/: berlin-lor-building-permits-2022-06-districts.geojson
data/berlin-lor-building-permits-2022-07/: berlin-lor-building-permits-2022-07-districts.geojson
data/berlin-lor-building-permits-2022-08/: berlin-lor-building-permits-2022-08-districts.geojson
data/berlin-lor-building-permits-2022-09/: berlin-lor-building-permits-2022-09-districts.geojson
data/berlin-lor-building-permits-2022-10/: berlin-lor-building-permits-2022-10-districts.geojson
data/berlin-lor-building-permits-2022-11/: berlin-lor-building-permits-2022-11-districts.geojson
data/berlin-lor-building-permits-2022-12/: berlin-lor-building-permits-2022-12-districts.geojson
data/berlin-lor-building-permits-2023-01/: berlin-lor-building-permits-2023-01-districts.geojson
docs/: data-product-canvas.md  dpds-canvas.md  odps-canvas.md
(+55 files in other folders)
